add new game button, create puzzle array that lists blanks for the letters

--- a/app/templates/gameboard.html
+++ b/app/templates/gameboard.html
@@ -1,4 +1,3 @@
-<button ng-click="gameboard.newGame();">New Game!</button>
-<div>
-  {{ gameboard.WordFactory.newWord.word }}
+<div ng-repeat="letter in gameboard.puzzle track by $index">
+  <div>{{ letter }}</div>
 </div>
