--- a/app/templates/gameboard.html
+++ b/app/templates/gameboard.html
@@ -1,3 +1,24 @@
+<!-- Modal -->
+<div class="modal fade" id="gameOverModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Better Luck Next Time!</h5>
+        <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button> -->
+      </div>
+      <!-- <div class="modal-body">
+        ...
+      </div> -->
+      <div class="modal-footer">
+        <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
+        <button type="button" class="btn btn-primary" data-dismiss="modal" ng-click="gameBoard.newGame();">Start New Game</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 <button ng-click="gameBoard.newGame();">New Game!</button>
 <div class="jumbotron">
   <div ng-repeat="letter in gameBoard.puzzle track by $index" class="puzzle">
