--- a/app/templates/gameboard.html
+++ b/app/templates/gameboard.html
@@ -3,7 +3,8 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Better Luck Next Time!</h5>
+        <h5 class="modal-title" ng-show="gameBoard.playerLost">Better Luck Next Time!</h5>
+        <h5 class="modal-title" ng-show="gameBoard.playerWon">Congrats! You Won!</h5>
         <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button> -->
