--- a/app/templates/userStats.html
+++ b/app/templates/userStats.html
@@ -1,7 +1,7 @@
 <div class="panel panel-success">
   <div class="panel-heading">
     <h3 class="panel-title">Yer Total Plunder</h3> </div>
-  <div class="panel-body"> {{userStats.UsersFactory.showUserData.wins}} </div>
+  <div class="panel-body"> {{userStats.UsersFactory.showUserData.wins}} treasure chests </div>
 </div>
 <div class="panel panel-success">
   <div class="panel-heading">
