--- a/app/templates/instructions.html
+++ b/app/templates/instructions.html
@@ -5,9 +5,7 @@
     I have more doubloons than I know what t’do with, so I’m willin’t’ make a wager with all who dares up for the challenge.
   </p>
   <p class="instructions-text">
-    The rules are so simple even a Spanish conquistador could play... I will come up with a random word and provide you with the number of letters that are in it. You will then guess one letter at a time and I will let you know how many occurrences of said
-    letter are in the word. But be careful! For every letter you guess that isn’t in the word, you must take a step forward on the plank. And if yer wishin’ that the plank is as long as one of the Kraken’s tentacles, think again! It’s only 6 steps long.
-    If you guess the word before running out of steps, I’ll give ya some treasure. And if not...
+    The rules are so simple even my lowest ranking, poop deck scrubbin' sailor could figure them out... I will come up with a random word and provide you with the number of letters that are in it. You will then guess one letter at a time and I will let you know how many occurrences of said letter are in the word. But be careful! For every letter you guess that isn’t in the word, you must take a step forward on the plank. And if yer wishin’ that the plank is as long as one of the Kraken’s tentacles, think again! It’s only 6 steps long. If you guess the word before running out of steps, I’ll give ya some treasure. And if not...
   </p>
   <div class="davey-jones-container">
     <img src="https://upload.wikimedia.org/wikipedia/commons/5/5f/Punch_Davy_Jones%27s_Locker.png" class="davey-jones-img"/>
