redesign user stats page, hide nav buttons if not signed in

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -109,3 +109,9 @@ div, p {
 .modal-title {
   text-align: center;
 }
+
+/* User Stats */
+
+.user-stats-container {
+  margin-top: 15px !important;
+}
