--- a/app/templates/userStats.html
+++ b/app/templates/userStats.html
@@ -1,20 +1,22 @@
-<div class="panel panel-success">
-  <div class="panel-heading">
-    <h3 class="panel-title">Yer Total Plunder</h3> </div>
-  <div class="panel-body"> {{userStats.UsersFactory.showUserData.wins}} treasure chests </div>
-</div>
-<div class="panel panel-success">
-  <div class="panel-heading">
-    <h3 class="panel-title">Trips to Davy Jones' Locker</h3> </div>
-  <div class="panel-body"> {{userStats.UsersFactory.showUserData.losses}} </div>
-</div>
-<div class="panel panel-success">
-  <div class="panel-heading">
-    <h3 class="panel-title">Total Games</h3> </div>
-  <div class="panel-body"> {{userStats.UsersFactory.showUserData.total_games}} </div>
-</div>
-<div class="panel panel-success">
-  <div class="panel-heading">
-    <h3 class="panel-title">Win Percentage</h3> </div>
-  <div class="panel-body"> {{ (userStats.UsersFactory.showUserData.average * 100) | number: 2}}%</div>
+<div class="container user-stats-container">
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">Yer Total Plunder</h3> </div>
+    <div class="panel-body"> {{userStats.UsersFactory.showUserData.wins}} treasure chests </div>
+  </div>
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">Trips to Davy Jones' Locker</h3> </div>
+    <div class="panel-body"> {{userStats.UsersFactory.showUserData.losses}} </div>
+  </div>
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">Total Games</h3> </div>
+    <div class="panel-body"> {{userStats.UsersFactory.showUserData.total_games}} </div>
+  </div>
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">Win Percentage</h3> </div>
+    <div class="panel-body"> {{ (userStats.UsersFactory.showUserData.average * 100) | number: 2}}%</div>
+  </div>
 </div>
