add username to user stats

--- a/app/templates/userStats.html
+++ b/app/templates/userStats.html
@@ -1,4 +1,5 @@
 <div class="container user-stats-container">
+  <h2>Let's see how ya'v been performing, {{ userStats.username }}</h2>
   <div class="panel panel-default">
     <div class="panel-heading">
       <h3 class="panel-title">Yer Total Plunder</h3> </div>
