refactor, hide nav buttons if signed out

--- a/app/templates/signInPage.html
+++ b/app/templates/signInPage.html
@@ -18,7 +18,7 @@
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
       <button class="btn btn-default" ng-click="signInPage.submitUser()">Submit</button>
-      <button class="btn btn-default" ng-hide="signInPage.currentUser" ng-click="signInPage.currentUser=true">Already sailed the high seas?</button>
+      <button class="btn btn-default" ng-hide="signInPage.currentUser" ng-click="signInPage.currentUser=true">Already sailed the high seas before?</button>
       </div>
     </div>
   </div>
