--- a/app/templates/userStats.html
+++ b/app/templates/userStats.html
@@ -3,7 +3,8 @@
   <div class="panel panel-default">
     <div class="panel-heading">
       <h3 class="panel-title">Yer Total Plunder</h3> </div>
-    <div class="panel-body"> {{userStats.UsersFactory.showUserData.wins}} treasure chests </div>
+    <div class="panel-body"> {{userStats.UsersFactory.showUserData.wins}}
+     </div>
   </div>
   <div class="panel panel-default">
     <div class="panel-heading">
